--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h2 class="subtitle">About</h2>
               </div>
               <div class="about-photo">
-                <img src="/img/photo-1.jpg" alt="A Photo Of Valeriya Sapega" />
+                <img src="img/photo-1.jpg" alt="A Photo Of Valeriya Sapega" />
               </div>
               <div class="about-text">
                 <p>
