--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h2 id="name-logo">Valeriya Sapega</h2>
         </div>
         <div class="header-text">
-          <h1>Software Developer passionate about all things interactive</h1>
+          <h1>Frontend Developer passionate about all things interactive</h1>
         </div>
       </header>
       <main class="main">
