--- a/index.html
+++ b/index.html
@@ -147,16 +147,19 @@
                   <p class="skill-name">HTML</p>
                 </div>
                 <div class="skill">
-                  <p class="skill-name">CSS</p>
+                  <p class="skill-name">CSS/SCSS</p>
                 </div>
                 <div class="skill">
                   <p class="skill-name">React</p>
                 </div>
                 <div class="skill">
+                  <p class="skill-name">Redux</p>
+                </div>
+                <div class="skill">
                   <p class="skill-name">TypeScript</p>
                 </div>
                 <div class="skill">
-                  <p class="skill-name">GitHub</p>
+                  <p class="skill-name">Git</p>
                 </div>
               </div>
             </div>
